@@ -1,7 +1,6 @@
 DATABASE_URL=sqlite://:memory:
 
 CELERY_BROKER_URL=memory://
-CELERY_RESULT_BACKEND=db+sqlite://:memory:
-CELERY_ALWAYS_EAGER=true
+CELERY_ALWAYS_EAGER=True
 
-SKIP_INIT=true
+SKIP_INIT=True
