@@ -4,7 +4,7 @@ set -e
 function wait_for_broker {(
   set +e
   for try in {1..60} ;  do
-    python -c "from kombu import Connection; x=Connection('$CELERY_BROKER_URL', timeout=1); x.connect()" &> /dev/null && break
+    python -c "from kombu import Connection; x=Connection('$CELERY_BROKER_URL', timeout=1); x.connect()" && break
     echo "Waiting for celery broker to respond..."
     sleep 1
   done
@@ -13,7 +13,7 @@ function wait_for_broker {(
 function wait_for_database {(
   set +e
   for try in {1..60} ; do
-    python -c "from django.db import connection; connection.connect()" &> /dev/null && break
+    python -c "from django.db import connection; connection.connect()" && break
     echo "Waiting for database to respond..."
     sleep 1
   done
@@ -22,9 +22,9 @@ function wait_for_database {(
 function wait_for_migrations {(
   set +e
   for try in {1..60} ; do
-    # Kind of ugly but not sure if there's another way to determine if migrations haven't run
-    # migrate --list returns a checkbox list of migrations, empty checkboxes mean they haven't been run
-    python manage.py migrate --list | grep "\[ \]" &> /dev/null || break
+    # Kind of ugly but not sure if there's another way to determine if migrations haven't run.
+    # showmigrations -p returns a checkbox list of migrations, empty checkboxes mean they haven't been run
+    python manage.py showmigrations -p | grep "\[ \]" &> /dev/null || break
     echo "Waiting for database migrations to be run..."
     sleep 1
   done
