@@ -1,11 +1,10 @@
 amqp<2.0
 anyjson==0.3.3
 argparse==1.2.1
-celery[redis]==3.1.23
+celery>=4,<5
 dj-database-url==0.4.2
 django-appconf==1.0.2
 django-auth-ldap==1.2.6
-django-celery==3.1.17
 django-compressor==2.1.1
 django-filter==1.0.1
 django-jsonify==0.3.0
@@ -27,7 +26,9 @@ PyJWT==0.1.2
 pyOpenSSL==16.1.0
 python-dateutil==2.1
 pytz==2014.10
+redis
 requests==2.7.0
 twilio==3.4.1
+vine==1.1.3
 whitenoise==3.3.0
 wsgiref==0.1.2
