@@ -1,3 +1,8 @@
+master
+------
+
+* Upgrade to Celery 4
+
 Version 0.9.2
 -------------
 
